# QuadMeshGenerator

./: .gitignore  CMakeLists.txt  Doxyfile  mayaUI.py  quadroNode.py
Plugin/: .gitignore  CMakeLists.txt
Plugin/MEL/: QuadroUI.mel  TEST.mb
Plugin/PluginMLL/: QuadroPlugin.mll
Plugin/src/: quadro_plugin.cpp
docs/html/: annotated.html  api_8cpp.html  api_8h.html  api_8h_source.html  assert_8cpp.html  assert_8h.html  assert_8h_source.html  camera_8cpp.html  camera_8h.html  camera_8h_source.html  class_camera-members.html  class_camera.html  class_component_operator-members.html  class_component_operator.html  class_drawable-members.html  class_drawable.html  class_drawable_line-members.html  class_drawable_line.html  class_drawable_point-members.html  class_drawable_point.html  class_front_edge_operator-members.html  class_front_edge_operator.html  class_mesh_lib_1_1_c_parser-members.html  class_mesh_lib_1_1_c_parser.html  class_mesh_lib_1_1_c_token-members.html  class_mesh_lib_1_1_c_token.html  class_morse_function-members.html  class_morse_function.html  class_obj_model-members.html  class_obj_model.html  class_q_morph_display-members.html  class_q_morph_display.html  class_q_morph_operator-members.html  class_q_morph_operator.html  class_shader-members.html  class_shader.html  class_side_define_operator-members.html  class_side_define_operator.html  class_smoother-members.html  class_smoother.html  (+200 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  defines_2.js  (+74 more)
glsl/: field3d.frag.glsl  field3d.geom.glsl  field3d.vert.glsl  halfedge3d.geom.glsl  line.geom.glsl  line.vert.glsl  model.frag.glsl  model.vert.glsl  point.frag.glsl  point.geom.glsl  point.vert.glsl  point3d.geom.glsl
python_server/: main.py
src/: camera.cpp  camera.h  drawable.h  glmeshviewer.cpp  glmeshviewer.h  glmeshviewer_main.cpp  meshcomponents.cpp  meshcomponents.h  test_operator.cpp  test_operator.h
src/api/: api.cpp  eigen.h
src/field_optimize/: field_optimize.cpp  field_optimize.h
src/gurobi/: gurobi_optimize.cpp  gurobi_optimize.h  main.cpp
src/laplacian/: laplacian.cpp  laplacian.h
src/mesh/: assert.cpp  assert.h  components.cpp  components.h  core.h  display.cpp  display.h  io.cpp  io.h  mesh.h  meshassert.cpp  meshassert.h  meshattribute.cpp  meshattribute.h  meshcomponents.cpp  meshcomponents.h  meshcontroller.cpp  meshcontroller.h  meshdisplay.cpp  meshdisplay.h  meshio.cpp  meshio.h  meshnormal.cpp  meshnormal.h  meshoperator.cpp  meshoperator.h  meshrecorder.cpp  meshrecorder.h  operator.cpp  operator.h  recorder.cpp  recorder.h
src/mesh/misc/: strutil.h
src/msc/: msc.cpp  msc.h
src/parameterization/: parameterization.cpp  parameterization.h
src/qmorph/: component_operator.cpp  component_operator.h  frontedge.h  frontedge_operator.cpp  frontedge_operator.h  qmorph.h  qmorph_display.cpp  qmorph_display.h  qmorph_operator.cpp  qmorph_operator.h  sidedefine_operator.cpp  sidedefine_operator.h  smoother.cpp  smoother.h  util.cpp  util.h
src/tests/: test_thread.cpp  test_thread.h
src/thread_support/: thread_support.cpp  thread_support.h
src/ttk/: CMakeLists.txt  main.cpp  vtkPVExtractComponent.cxx  vtkPVExtractComponent.h
src/wave_quadrangulation/: wave_quadrangulation.cpp  wave_quadrangulation.h
test/off/: bunny.off  bunny_refined.off  sphere_1562.off  sphere_9902.off
